# minimal_working_example

./: .gitignore  Cargo.toml  README.md  devenv.nix  docker-compose.yml  nginx.conf
src/: app.rs  main.rs
